--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,12 +2,10 @@
     <ion-header-bar class="bar-positive">
         <h2 class="title">PDF Viewer</h2>
     </ion-header-bar>
-    <ion-content>
-        <div class="mainDiv">
-            <div class="childDiv">
-                <button class="button pdfBtn button-positive" ng-click="gotoPDF1()">PDF 1</button>
-                <button class="button pdfBtn button-positive" ng-click="gotoPDF2()">PDF 2</button>
-            </div>
+    <ion-content padding="true">
+        <div class="homeContentBtnDiv">
+            <button margin-bottom class="button button-block button-large button-positive" ng-click="gotoPDF1()">PDF 1</button>
+            <button class="button button-large button-block button-positive" ng-click="gotoPDF2()">PDF 2</button>
         </div>
     </ion-content>
 </ion-view>
